<resources>
    <string name="app_name">Gluco</string>
    <string name="Gluco">logogluco</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="IniciarSesio">Iniciar Sesion</string>
    <string name="Registrarse">Registrarse</string>
    <string name="corero">Correo electrónico o teléfono</string>
    <string name="contraseña">Ingresa tu contraseña</string>
    <string name="Registro">Registrarse</string>
    <string name="Nombre_registro">Nombre:</string>
    <string name="Correoelectronico_registrp">Correo electrónico:</string>
    <string name="Contraseña_registro">Contraseña:</string>
    <string name="Confirmar_contrasña_registro">Confirmar contraseña:</string>
    <string name="Guardar_registro">Registrarse</string>
    <string name="Nombres">Ingresa tu Nombre(s)</string>
    <string name="EjmeploConrreo">nombre@domino.extensión</string>
    <string name="ConfirmacionContraseña">Al menos 6 caracteres</string>
    <string name="IngresarContraseña">Vuelva a ingresar su contraseña</string>
    <string name="TerminaTuRegistro">Terimina tu registro</string>
    <string name="Direccióndelconsultorio">Dirección del consultorio:</string>
    <string name="EscribaAqui">Calle, numero, Colonia y Ciudad</string>
    <string name="NUmeroTelfonico">Numero telefónico:</string>
    <string name="HorariosDecConsulta">Horarios dec Consulta:</string>
    <string name="De">De:</string>
    <string name="a">a:</string>
    <string name="Fechadenacmineto">Fecha de nacimineto:</string>
    <string name="terminarregistro">Terminar registro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="TituloBarra">BarraNavegacion</string>
    <string name="NombredePaciente">Pedro Ramos</string>
    <string name="TipodeDiabets">Diabetes tipo G</string>
    <string name="botonPerfil">Perfil</string>
    <string name="Descripcion">Fotodeusuario</string>
    <string name="Genero">Genero:</string>
    <string-array name="genero">
        <item name="hombre" type="string">Hombre</item>
        <item name="mujer" type="string">Mujer</item>
    </string-array>
    <string name="tipodediabetes">Tipo de diabetes:</string>
    <string-array name="tipodediabetes">
        <item name="tipo1" type="string">diabetes Tipo 1</item>
        <item name="tipo2" type="string">diabetes Tipo 2</item>
    </string-array>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Dietas</string>
    <string name="menu_slideshow">Consultas</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Consultas">Consultas</string>
    <string name="Dietas">Dietas</string>
    <string name="RegistrarPaciente">Registrar paciente</string>
    <string name="cerrasrsession">Cerrar sesión</string>
    <string name="guinhora">____</string>


    //Dietas
    <string name="SP">Seleccionar paciente</string>
    <string name="masrojo">cruzroja</string>
    <string name="dieta">Dieta X</string>
    <string name="titulo_gre_dietas">       Agregar dietas</string>
    <string name="almuerzo">Desayuno:</string>
    <string name="comida">Comida:</string>
    <string name="cena">Cena:</string>
    <string name="alimentos">Alímentos permitidos:</string>
    <string name="nombreDieta">Nombre de la dieta:</string>
    <string name="guardar">Agregar</string>

    //Consulta
    <string name="med">Mediciones</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="nombre1">Nombre</string>
    <string name="fechadn">Fecha de nacimiento</string>
    <string name="tipodiab">Tipo de diabetes</string>
    <string name="Correo">Correo Electronico</string>
    <string name="medifech">100mg/dl 05 de Oct 10:12 AM</string>
    <string name="buscar">Buscar</string>
    <string name="nada">.</string>
    <string name="hora"> 00:00 </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
