<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_consultas"
            android:title="@string/Consultas"/>
        <item
            android:id="@+id/nav_dieta"
            android:icon="@drawable/ic_dietas"
            android:title="@string/Dietas"/>
        <item
            android:id="@+id/nav_paciente"
            android:icon="@drawable/ic_registro_paciente"
            android:title="@string/RegistrarPaciente"/>
        <item
            android:id="@+id/nav_toolsarriba"
            android:icon="@drawable/ic_cerrarsesion"
            android:title="@string/cerrasrsession"
            android:visible="true"
            app:showAsAction="never"/>


    </group>

</menu>
