<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_consultas"
            android:title="@string/Consultas" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_dietas"
            android:title="@string/Dietas" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_registro_paciente"
            android:title="@string/RegistrarPaciente" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_cerrarsesion"
            android:title="@string/cerrasrsession" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>!-->

</menu>
