<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageGluco"
        android:layout_width="195dp"
        android:layout_height="89dp"
        android:contentDescription="@string/Gluco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@drawable/glucologo" />

    <TextView
        android:id="@+id/Bienvenido"
        android:layout_width="139dp"
        android:layout_height="45dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="111dp"
        android:text="@string/Bienvenido"
        android:textColor="@android:color/background_dark"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/inputCorreoLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageGluco" />


    <LinearLayout
        android:id="@+id/inputCorreoLogin"
        android:layout_width="349dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#4B8EC3"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_correo_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/corero"
                android:inputType="textEmailAddress"
                android:shadowColor="#4B8EC3"
                android:textColor="#4B8EC3"
                android:textColorHighlight="#4B8EC3"
                android:textColorHint="#4B8EC3"
                android:textColorLink="#4B8EC3"
                android:textCursorDrawable="@color/CampoEscribir" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/IniciarSession"
        android:layout_width="189dp"
        android:layout_height="63dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="19dp"
        android:background="@color/botonLogin"
        android:backgroundTint="@color/botonLogin"
        android:text="@string/IniciarSesio"
        android:textColor="@android:color/white"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnresgistrarce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputContraseñaLogin" />

    <Button
        android:id="@+id/btnresgistrarce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="67dp"
        android:background="#00FFFFFF"
        android:text="@string/Registrarse"
        android:textColor="#4B8EC3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IniciarSession" />

    <LinearLayout
        android:id="@+id/inputContraseñaLogin"
        android:layout_width="349dp"
        android:layout_height="56dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="353dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="194dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="354dp"
            android:layout_height="58dp"
            android:textColorHint="#4B8EC3"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_contraseña_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:textCursorDrawable="@color/CampoEscribir" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="411dp"
        android:layout_marginBottom="659dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>